{
    "name": "ConsumablesSelector",
    "maps": [
        {
            "name": "ConsumableSelector",
            "id": "1c61f787-dcad-4c0b-8cd3-0843a79adef0",
            "actions": [
                {
                    "name": "TriggerConsumable",
                    "type": "Button",
                    "id": "3c0f0c1c-2c71-4840-ac0f-3c4b4f4e09c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveNext",
                    "type": "Button",
                    "id": "8ba4e9cf-c166-4975-b5c6-9a3badf27c7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveBefore",
                    "type": "Button",
                    "id": "f8b499d2-210a-4839-bdce-7585a708d7b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3e25214-6be3-432d-9c2d-a45f4845eefe",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TriggerConsumable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05e981f3-f241-4bd0-88ce-fc89c0994099",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "TriggerConsumable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e6eb7f4-5dca-4636-be03-52d9bc9fd728",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fb44870-a4de-4f11-bfc4-685f8da6ad8e",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "MoveNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7df802b-e078-4618-845a-89b348a7c20c",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveBefore",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f716fd4b-9daa-489d-aaf6-5f55a02caf66",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "xBoxController",
                    "action": "MoveBefore",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "xBoxController",
            "bindingGroup": "xBoxController",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}